# nakala

./: .gitignore  Cargo.toml  Grammar.md  LICENSE  README.md
.github/workflows/: CI.yml
crates/ast/: Cargo.toml
crates/ast/src/: expr.rs  lib.rs  op.rs  stmt.rs  ty.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: lib.rs
crates/eldiro/: Cargo.toml
crates/eldiro-cli/: Cargo.toml
crates/eldiro/src/: env.rs  val.rs
crates/engine/: Cargo.toml
crates/engine/src/: builtins.rs  class.rs  env.rs  error.rs  func.rs  lib.rs  struct_.rs  val.rs
crates/hir/: Cargo.toml
crates/hir/src/: database.rs  lib.rs
crates/interpreter/: Cargo.toml
crates/interpreter/src/: env.rs  error.rs  expr.rs  instance.rs  lib.rs  val.rs
crates/interpreter/src/value/: builtin.rs  class.rs  function.rs  instance.rs  list.rs  mod.rs  val.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lib.rs  token_kind.rs
crates/meta/: Cargo.toml
crates/meta/src/: lib.rs  span.rs
crates/nakala/: Cargo.toml
crates/nakala-cli/: Cargo.toml
crates/nakala-cli/src/: main.rs
crates/nakala/src/: binding_def.rs  env.rs  expr.rs  func_def.rs  lexer.rs  lib.rs  line_editor.rs  main.rs  parser.rs  stmt.rs  syntax.rs  utils.rs  val.rs
crates/nakala/src/expr/: binding_usage.rs  block.rs  func_call.rs
crates/nakala/src/parser/: event.rs  expr.rs  marker.rs  sink.rs
crates/nakala/tests/: block.rs  blocks.rs  booleans.rs  builtins.rs  exprs.rs  for_loops.rs  function_calls.rs  function_defs.rs  ifs.rs  nakala.rs  utils.rs  variables.rs
crates/nakala/tests/examples/: blocks.nak  booleans.nak  comments.nak  exprs.nak  for_loops.nak  functions.nak  ifs.nak  strings.nak  variables.nak
crates/parser/: Cargo.toml
crates/parser/src/: error.rs  event.rs  grammar.rs  lib.rs  parser.rs  sink.rs  source.rs  symtab.rs  type_check.rs
crates/parser/src/grammar/: block.rs  class.rs  expr.rs  func.rs  stmt.rs  struct_.rs
crates/parser/src/parser/: marker.rs  parse_error.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: lib.rs
crates/wasm/: Cargo.toml  README.md
crates/wasm/site/: index.html  index.js  package-lock.json  package.json  webpack.config.js
crates/wasm/src/: lib.rs
examples/: blocks.nak  class.nak  class_this.nak  closure.nak  enums.nak  fib.nak  functions.nak  ifs.nak  json_parser.nak  linkedlist.nak  lists.nak  rule110.nak  stack.nak  typechecking.nak  until.nak
src/: binding_def.rs  env.rs  expr.rs  stmt.rs  utils.rs  val.rs
src/expr/: binding_usage.rs  block.rs
