[package]
name = "hir"
version = "0.1.0"
authors = ["Reagan McFarland <reagan.mcfarland1059@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol_str = "0.1.17"
ast = {path = "../ast"}
syntax = {path = "../syntax"}
la-arena = "0.2.0"

[dev-dependencies]
parser = {path = "../parser"}
