[package]
name = "nakala"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser = { path = "../parser" } 
interpreter = { path = "../interpreter" } 
miette = { version = "4.7.0", features = ["fancy"] }
reedline = "0.5.0"
