[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexer = { path = "../lexer" }
ast = { path = "../ast" }
miette = { version = "4.7.0" }
meta = { path = "../meta" }
thiserror = "1.0.31"

[dev-dependencies]
expect-test = "1.2.2"

[features]
default = []
trace = []
