[package]
name = "nakjs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "JS bindings (via WASM) for the Nakala programming language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
parser = { path = "../parser" } 
interpreter = { path = "../interpreter" } 
ast = { path = "../ast" } 
miette = { version = "4.7.0", features = ["fancy"] }
meta = { path = "../meta" }
wasm-bindgen = "0.2"
